--- a/about.html
+++ b/about.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <script src="script.js"></script>
     <header id="aboutpageHeader">
         <h1><a href="index.html">Julie Nguyen | Web Portfolio</a></h1>
         <nav>
             <ul>
+                <li><button id="theme-toggle" aria-label="Toggle Theme">⏾</button></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="workExp.html">Work Experience</a></li>
